# satfarm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  test.py
satfarm/: SatImage.py  __init__.py  fusion.py  ops.py  utils.py
satfarm/operation/: fusion.py
satfarm/processor/: __init__.py  _advanced_ops.py  _attributes.py  _basic_ops.py  _export.py  _io.py  _rendering.py
tests/: __init__.py  test_fusion.py  test_satimage.py
