[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satfarm"
version = "0.1.0"
description = "A Python package for satellite image processing with fluent interface"
readme = "README.md"
license = "MIT"
authors = [
    {name = "husgbb", email = "hangm0101@gmail.com"}
]
maintainers = [
    {name = "husgbb", email = "hangm0101@gmail.com"}
]
keywords = ["satellite", "image processing", "geospatial", "remote sensing", "raster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "rioxarray>=0.13.0",
    "geopandas>=0.12.0", 
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "typeguard>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/saefarm-satellite/satfarm"
Repository = "https://github.com/saefarm-satellite/satfarm"
Documentation = "https://github.com/saefarm-satellite/satfarm"
Issues = "https://github.com/saefarm-satellite/satfarm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["satfarm"]

[tool.hatch.build.targets.sdist]
include = [
    "/satfarm",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
